k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <APPNAME>
  namespace: <NAMESPACE>
  labels:
     app: <APPNAME>
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: <APPNAME>
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: <APPNAME>
        tier: frontend
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - image: <IMAGE>
        resources:
          requests:
            cpu: 25m
            memory: 50Mi
          limits:
            cpu: 75m
            memory: 100Mi
        imagePullPolicy: Always
        name: <APPNAME>
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        stdin: true
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
