k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <APPNAME>
  namespace: <NAMESPACE>
spec:
  rules:
  - host: <HOST>
    http:
      paths:
      - backend:
          service:
            name: <APPNAME>
            port:
              number: 8080
        path: /
        pathType: Prefix
